Bugfix: Default-Theme doesn't support dark-mode (theme form google)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <button mat-menu-item (click)="updateTheme('strobe-theme')">Strobe</button>
       <button mat-menu-item (click)="updateTheme('ugly-theme')">Ugly</button>
     </mat-menu>
-    <mat-slide-toggle [(ngModel)]="darkMode" (change)="updateTheme()"></mat-slide-toggle>
+    <mat-slide-toggle [(ngModel)]="darkMode" [disabled]="themeName === 'default'" (change)="updateTheme()"></mat-slide-toggle>
     <mat-icon>dark_mode</mat-icon>
     <ng-container *ngIf="!remult.authenticated()">
       <button mat-flat-button color="primary" (click)="signIn()">{{terms.signIn}}</button>
