Support dard-mode for grid

--- a/src/app/common-ui-elements/src/angular/date-grid-2/data-grid2.component.scss
+++ b/src/app/common-ui-elements/src/angular/date-grid-2/data-grid2.component.scss
@@ -5,10 +5,10 @@
 
 .inner-wrapper {
   display: inline-block;
+  width: 100%;
 }
 .dataGrid {
   overflow: auto;
-  border: 1px solid #e0e0e0;
   height: 100%;
 }
 .dataGridBodyArea {
@@ -33,12 +33,6 @@
   clear: both;
   background-color: rgb(245, 245, 245);
   z-index: 3;
-  mat-icon {
-    font-size: 16px;
-    height: 18px;
-    width: 18px;
-    line-height: 18px;
-  }
 }
 .dataGridFooterButtonGroup {
   display: inline-block;
@@ -59,31 +53,15 @@
 .dataGridHeaderCell {
 }
 .dataGridDataCell {
-  border-top: 1px solid #e0e0e0;
 }
 .data-grid-row-more-buttons {
-  border-left: 1px solid #e0e0e0;
-  border-right: 1px solid #e0e0e0;
   padding-left: 0;
   padding-right: 0;
-  width: 18px;
-  mat-icon {
-    font-size: 16px;
-    height: 17px;
-    width: 18px;
-    line-height: 17px;
-  }
-  button {
-    width: auto;
-    height: auto;
-    line-height: 18px;
-  }
 }
 .data-grid-row-selection {
   width: 18px;
 }
 .dataGridFooterArea {
-  border: 1px solid #e0e0e0;
 }
 
 .filterDialog {
