--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,57 +1,55 @@
-.active-route{
-    background-color: #f2f2f2;
-    
+.active-route {
+  background-color: #f2f2f2;
 }
 
-.app-sidenav-container{
-    flex:1;
-    width:100%;
-    height:100%;
-    min-width:100%;
- //   min-height:100%;
-    border:1px solid rgba(0,0,0,0.5);
+.app-sidenav-container {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+  //   min-height:100%;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
-.mat-toolbar{
-    display:flex;
+.mat-toolbar {
+  display: flex;
 }
-.toolbar-title{
-    flex-grow: 1;
+.toolbar-title {
+  flex-grow: 1;
 }
-.user-info-button{
-    border: solid;
+.user-info-button {
+  border: solid;
 }
-.app-sidenav-content{
-    display:flex;
-    height:100%;
-    flex-direction: column;
+.app-sidenav-content {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
 }
-.app-sidenav{
-    width:240px;
+.app-sidenav {
+  width: 240px;
 }
-.wrapper{
-    padding:0 10px;
-    @media screen and (max-width:800px){
-        padding:0 2px;
-    }
+.wrapper {
+  padding: 0 10px;
+  @media screen and (max-width: 800px) {
+    padding: 0 2px;
+  }
 }
 
-$iconWidth:56px;
+$iconWidth: 56px;
 
-.sidenav-toggle{
-    
-    padding:0;
-    margin:8px;
-    min-width:$iconWidth;
-    @media(max-width: 720px){
-        display:flex;
-        align-items:center;
-        justify-content: center;
-    }
-    mat-icon{
-        font-size:30px;
-        height:$iconWidth;
-        width:$iconWidth;
-        line-height :$iconWidth;
-        color: white;
-    }
+.sidenav-toggle {
+  padding: 0;
+  margin: 8px;
+  min-width: $iconWidth;
+  @media (max-width: 720px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  mat-icon {
+    font-size: 30px;
+    height: $iconWidth;
+    width: $iconWidth;
+    line-height: $iconWidth;
+    color: white;
+  }
 }
