--- a/src/app/common-ui-elements/src/angular/filter-dialog/filter-dialog.component.html
+++ b/src/app/common-ui-elements/src/angular/filter-dialog/filter-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title *ngIf="!info.rightToLeft">
-  Filter {{ this.info.filterColumnToAdd?.caption }}
+  Filter {{ this.info.filterColumnToAdd.caption }}
 </h1>
 <h1 mat-dialog-title *ngIf="info.rightToLeft">
-  סינון {{ this.info.filterColumnToAdd?.caption }}
+  סינון {{ this.info.filterColumnToAdd.caption }}
 </h1>
 <div mat-dialog-content>
   <data-control
