--- a/src/app/common/data-area-dialog/data-area-dialog.component.html
+++ b/src/app/common/data-area-dialog/data-area-dialog.component.html
@@ -1,7 +1,7 @@
 <h3 matDialogHeader>{{ args.title }}</h3>
 
 <mat-dialog-content>
-  <div style="margin: 8px 0">
+  <div>
     <div class="help-text" *ngIf="args.helpText">
       {{ args.helpText }}
     </div>
