--- a/src/app/common-ui-elements/src/angular/data-control/data-control2.component.html
+++ b/src/app/common-ui-elements/src/angular/data-control/data-control2.component.html
@@ -12,6 +12,7 @@
         <input
           #theId
           matInput
+          autocomplete="off"
           [(ngModel)]="_getColumn()!.inputValue"
           type="{{ settings._getColDataType(map) }}"
           (ngModelChange)="settings._colValueChanged(map, record)"
@@ -49,27 +50,36 @@
     >
       <mat-label>{{ map.caption }}</mat-label>
       <div *ngIf="isSelect()">
-        <select
+        <mat-select
           matNativeControl
           [(ngModel)]="_getColumn()!.inputValue"
           (ngModelChange)="settings._colValueChanged(map, record)"
         >
-          <option *ngFor="let v of getDropDown()" [ngValue]="v.id">
+          <mat-option
+            *ngFor="let v of getDropDown()"
+            [value]="v.id"
+            [class]="map.valueListItemCss?.(v)"
+          >
             {{ v.caption }}
-          </option>
-        </select>
+          </mat-option>
+        </mat-select>
       </div>
       <mat-error *ngIf="getError()" [id]="'theId'">{{ getError() }}</mat-error>
     </mat-form-field>
 
     <div *ngIf="showCheckbox()">
       <mat-checkbox
+        *ngIf="_getEditable()"
         #theId1
         [(ngModel)]="_getColumn()!.inputValue"
         (ngModelChange)="settings._colValueChanged(map, record)"
         class="fix-label"
         >{{ map.caption }}</mat-checkbox
       >
+      <div *ngIf="!_getEditable()" style="display: flex; gap: 8px">
+        <mat-icon>{{ _getColumn()!.inputValue ? 'check' : 'close' }} </mat-icon
+        ><mat-label>{{ map.caption }}</mat-label>
+      </div>
       <mat-error *ngIf="getError()" [id]="'theId1'">{{ getError() }}</mat-error>
     </div>
   </ng-container>
