--- a/src/app/common-ui-elements/src/angular/data-control/data-control2.component.html
+++ b/src/app/common-ui-elements/src/angular/data-control/data-control2.component.html
@@ -54,6 +54,7 @@
           matNativeControl
           [(ngModel)]="_getColumn()!.inputValue"
           (ngModelChange)="settings._colValueChanged(map, record)"
+          [errorStateMatcher]="ngErrorStateMatches"
         >
           <mat-option
             *ngFor="let v of getDropDown()"
