--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,38 +1,45 @@
 // this code makes the font size larger than the standard
 // @import '~@angular/material/theming';
-@import '/node_modules/@angular/material/theming';  //@#CHANGED@#
+// @import '/node_modules/@angular/material/core/theming/all-theme';  //@#CHANGED@#
+// @import '/node_modules/@angular/material/theming';  //@#CHANGED@#
 // @import '~@angular/material/core/theming';
 
+// @use '@angular/materal' as mat;  //@#CHANGED@#
+
+// @include mat.core();
+@use '@angular/material' as mat;
+
+@include mat.core();
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+// @include mat-core();
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
-$custom-typography: mat-typography-config($font-family: 'Rubik,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;',
-    $display-4: mat-typography-level(112px, 112px, 300),
-    $display-3: mat-typography-level(56px, 56px, 400),
-    $display-2: mat-typography-level(45px, 48px, 400),
-    $display-1: mat-typography-level(34px, 40px, 400),
-    $headline: mat-typography-level(28px, 34px, 400),
-    $title: mat-typography-level(24px, 32px, 500),
-    $subheading-2: mat-typography-level(20px, 28px, 400),
-    $subheading-1: mat-typography-level(20px, 28px, 400),
-    $body-2: mat-typography-level(18px, 24px, 500),
-    $body-1: mat-typography-level(18px, 24px, 400),
-    $caption: mat-typography-level(18px, 24px, 400),
-    $button: mat-typography-level(18px, 16px, 500),
-    $input: mat-typography-level(18px, 1.125, 400));
+// $custom-typography: mat-typography-config($font-family: 'Rubik,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;',
+//     $display-4: mat-typography-level(112px, 112px, 300),
+//     $display-3: mat-typography-level(56px, 56px, 400),
+//     $display-2: mat-typography-level(45px, 48px, 400),
+//     $display-1: mat-typography-level(34px, 40px, 400),
+//     $headline: mat-typography-level(28px, 34px, 400),
+//     $title: mat-typography-level(24px, 32px, 500),
+//     $subheading-2: mat-typography-level(20px, 28px, 400),
+//     $subheading-1: mat-typography-level(20px, 28px, 400),
+//     $body-2: mat-typography-level(18px, 24px, 500),
+//     $body-1: mat-typography-level(18px, 24px, 400),
+//     $caption: mat-typography-level(18px, 24px, 400),
+//     $button: mat-typography-level(18px, 16px, 500),
+//     $input: mat-typography-level(18px, 1.125, 400));
 // Override typography CSS classes (e.g., mat-h1, mat-display-1, mat-typography, etc.).
-@include mat-base-typography($custom-typography);
+// @include mat-base-typography($custom-typography);
 
 // Override typography for a specific Angular Material components.
 // @include mat-checkbox-typography($custom-typography); //@#CHANGED@# removed becuse of an error
 
 // Override typography for all Angular Material, including mat-base-typography and all components.
-@include angular-material-typography($custom-typography);
+// @include angular-material-typography($custom-typography);
 
 /* You can add global styles to this file, and also import other style files */
 
