before update from 14 to 15

--- a/src/app/common/data-area-dialog/data-area-dialog.component.html
+++ b/src/app/common/data-area-dialog/data-area-dialog.component.html
@@ -26,6 +26,8 @@
   </button>
 
   <button mat-raised-button color="accent" (click)="confirm()">
-    {{ terms.ok }}
+    {{ terms.ok }} 
+    
   </button>
+  (data-area-dialog.component.html)
 </mat-dialog-actions>
