--- a/src/app/common-ui-elements/input-styles.scss
+++ b/src/app/common-ui-elements/input-styles.scss
@@ -1,31 +1,38 @@
 .dense-form-field {
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .mat-form-field-infix {
     padding: 0.3em 0 0.3em 0 !important;
   }
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .mat-form-field-wrapper {
     padding-bottom: 0.5em !important;
   }
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .mat-form-field-subscript-wrapper {
     padding-top: 0.6666666667em !important;
   }
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .mat-form-field-label {
     top: 1.2em !important;
   }
-  .mat-error {
+  .mat-mdc-form-field-error {
     white-space: nowrap;
     text-overflow: ellipsis;
   }
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float
     .mat-form-field-label {
     transform: translateY(-1em) scale(0.75) !important;
   }
 }
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
 .dense-form-field.mat-form-field-can-float.mat-form-field-should-float
   .mat-form-field-label {
   transform: translateY(-1em) scale(0.75) !important;
 }
 .full-width-form-field {
   width: 100%;
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .mat-form-field-infix {
     width: auto !important;
   }
