--- a/src/app/common-ui-elements/src/angular/date-grid-2/data-grid2.component.scss
+++ b/src/app/common-ui-elements/src/angular/date-grid-2/data-grid2.component.scss
@@ -1,3 +1,10 @@
+@use '@angular/material' as mat;
+
+.grid-root {
+  @include mat.checkbox-density(-5);
+  @include mat.icon-button-density(-5);
+}
+
 .row-button {
   height: auto;
   line-height: normal;
@@ -45,7 +52,12 @@
 }
 
 .dataGridFooterButtonGroup {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+
+  button {
+    box-sizing: content-box;
+  }
 }
 
 .dataGridFooterArea {
@@ -83,9 +95,10 @@
   }
 
   button {
-    width: auto;
-    height: auto;
+    width: 24px !important;
+    height: 24px !important;
     line-height: 24px;
+    padding: 0 !important;
   }
 }
 
@@ -95,6 +108,7 @@
 
 .dataGridFooterArea {
   border: 1px solid #e0e0e0;
+
 }
 
 .filterDialog {
