--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -12,16 +13,25 @@
 $angular-starter-project-theme: mat.define-theme((color: (theme-type: light,
         primary: mat.$azure-palette,
         tertiary: mat.$blue-palette,
-      ),
-      density: (scale: 0,
-      )));
+        use-system-variables: true),
+      typography:(plain-family:'Rubik', brand-family:'Rubik', use-system-variables: true),
+    ));
+
+$green-theme: mat.define-theme((color: (theme-type: light,
+        primary: mat.$green-palette,
+        tertiary: mat.$blue-palette,
+        use-system-variables: true),
+      typography:(plain-family:'Rubik', brand-family:'Rubik', use-system-variables: true),
+    ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 :root {
   @include mat.all-component-themes($angular-starter-project-theme);
-
+  @include mat.system-level-colors($angular-starter-project-theme);
+  @include mat.system-level-typography($angular-starter-project-theme);
+  @include mat.toolbar-color($angular-starter-project-theme);
 }
 
 // Comment out the line below if you want to use the pre-defined typography utility classes.
@@ -40,6 +50,13 @@ $angular-starter-project-theme: mat.define-theme((color: (theme-type: light,
 
 .full-width-form-field {
   width: 100%;
+}
+
+:root {
+  --mat-card-subtitle-text-color: rgba(0, 0, 0, 0.54); //var(--sys-on-surface-variant)
+  --mat-card-subtitle-text-weight: 400;
+  --mat-toolbar-container-background-color: var(--sys-primary);
+  --mat-toolbar-container-text-color: var(--sys-on-primary);
 }
 
 .mdc-text-field__input::-webkit-calendar-picker-indicator {
