--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,25 +2,18 @@
   background-color: #f2f2f2;
 }
 
+.toolbar-title {
+  width: 100%
+}
+
 .app-sidenav-container {
   flex: 1;
   width: 100%;
   height: 100%;
+  background-color: #fafafa;
   min-width: 100%;
-  //   min-height:100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.mat-toolbar {
-  display: flex;
-}
-
-.toolbar-title {
-  flex-grow: 1;
-}
-
-.user-info-button {
-  border: solid;
+  // min-height: 100%;
+  //   border:1px solid rgba(0,0,0,0.5);
 }
 
 .app-sidenav-content {
@@ -31,6 +24,7 @@
 
 .app-sidenav {
   width: 240px;
+  box-shadow: var(--mat-app-elevation-shadow-level-10, none);
 }
 
 .wrapper {
@@ -40,6 +34,7 @@
     padding: 0 2px;
   }
 }
+
 
 
 
